# Outer-Space-Battles-

./: .gitignore  Feature List.txt  README.md  Readme.txt
3501Project/: CMakeLists(issue).txt  CMakeLists.txt  CMakeLists_1.txt
3501Project/media/models/: Engine.mesh  Skybox.mesh  Turbine.mesh  asteroid.mesh
3501Project/media/models/player/: ship.mesh
3501Project/src/: AssetManager.cpp  AssetManager.h  Asteroid.cpp  Asteroid.h  Asteroid.material  AsteroidGame.cpp  AsteroidGame.h  AsteroidManager.cpp  AsteroidManager.h  BoundingBox.cpp  BoundingBox.h  BoundingBox.material  BoundingBoxFp.glsl  BoundingBoxVp.glsl  Bullet.cpp  Bullet.h  CollisionManager.cpp  CollisionManager.h  EngineMaterial.material  Fire.material  GlobalDebugInitializations.h  GlobalExterns.h  GlobalVariableValues.txt  JetFire.particle  LevelManager.cpp  LevelManager.h  MenuManager.cpp  MenuManager.h  OgreApplication.cpp  OgreApplication.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  Projectile.cpp  Projectile.h  Projectile.material  ProjectileManager.cpp  ProjectileManager.h  ProjectileVp.glsl  (+20 more)
3501Project/src/framework/: Framework.cpp
